Meta description added

--- a/bookbord.html
+++ b/bookbord.html
@@ -27,9 +27,10 @@
   <link rel="manifest" href="/manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-  <title>Book Bord</title>
   <meta name="title" content="Cafeloppen Christiania">
-  <meta name="description" content="Book bord og besøg Cafeloppen så dig og dit selskab kan få en oplevelse">
+  <title>Cafeloppen Christiania | Autentisk Thai Mad</title>
+  <meta name="Description" content="Oplev den rustikke stemning og fantastiske thai retter, hos Cafeloppen. Book bord nu. ">
+  <meta name="Keywords" content="thai, thai mad, restaurant, take away, vegansk, ">
 </head>
 
 <body>
@@ -83,7 +84,7 @@
       <p class="aboutus">Tlf: +45 41 18 41 16<br>eller<br>Book igennem thefork herunder<br><br></p>
       <iframe src="https://module.lafourchette.com/da_DK/module/209537-18704 " style="border: 1px solid green; width: 100%; min-height:490px;  scrolling:yes;"></iframe>
     </section>
-        <!-- The Fork imbed slut-->
+    <!-- The Fork imbed slut-->
 
     <section class="kontakt forbestillingsektion">
       <div class="arrangementerinside">
