--- a/catering.html
+++ b/catering.html
@@ -27,9 +27,10 @@
   <link rel="manifest" href="/manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-  <title>Cafeloppen Christiania</title>
+  <title>Cafeloppen Christiania | Autentisk Thai Mad</title>
+  <meta name="description" content="Catering hos Cafeloppen levere alt lige fra syvretters menuer til en simpel buffet til helt op til 200 personer. ">
+  <meta name="keywords" content="thai, thai mad, restaurant, take away, vegansk, ">
   <meta name="title" content="Cafeloppen Christiania">
-  <meta name="description" content="Hos Cafeloppen, tilbyder vi også catering til selskaber. Vi har alt fra veganske retter til thai-inspirerede cocktails. Alt er MSG-frit. Klik ind og se udvalget!">
 </head>
 
 <body>
@@ -101,7 +102,7 @@
         </form>
       </div>
     </section>
-        <!-- Catering formular slut-->
+    <!-- Catering formular slut-->
 
   </div>
 
