--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
   <link rel="manifest" href="/manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <title>Cafeloppen Christiania | Autentisk Thai Mad</title>
+  <meta name="description" content="Hos Cafeloppen har vi autentisk thai mad i hjertet af Christianshavn. Se menuen, book bord eller bestil take away.">
+  <meta name="keywords" content="thai, thai mad, restaurant, take away, vegansk ">
   <meta name="title" content="Cafeloppen Christiania">
-  <meta name="description" content="Cafeloppen byder på autentisk mad fra Thailand i hyggelige omgivelser på Christiania. Vi har alt fra veganske retter til thai-inspirerede cocktails. Klik ind og se menukortet!">
 </head>
 
 <body>
