--- a/kontakt.html
+++ b/kontakt.html
@@ -11,7 +11,6 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="js/jquery.waypoints.min.js"></script>
-  <title>Cafeloppen Christiania</title>
   <link rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="img/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="img/apple-icon-72x72.png">
@@ -28,8 +27,9 @@
   <link rel="manifest" href="/manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-  <meta name="title" content="Cafeloppen Christiania">
-  <meta name="description" content="Kontakt os med følgende muligheder">
+  <title>Cafeloppen Christiania | Autentisk Thai Mad</title>
+  <meta name="description" content="Har du spørgsmål mm. så kontakt os her. Find vej til restauranten. ">
+  <meta name="keywords" content="thai, thai mad, restaurant, take away, vegansk, ">
 </head>
 
 <body>
@@ -99,7 +99,7 @@
 
 
 
-<!-- Google Maps imbed placering med Cafeloppen-->
+  <!-- Google Maps imbed placering med Cafeloppen-->
   <div class="maps">
     <iframe class="embedmaps"
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.884131915545!2d12.59454711609907!3d55.673615005563846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465253397d75aa69%3A0x4023eef63f84fa5f!2sCafeloppen%20Christiania%20Streetkitchen!5e0!3m2!1sda!2sdk!4v1590405727949!5m2!1sda!2sdk"
