--- a/omos.html
+++ b/omos.html
@@ -27,9 +27,10 @@
   <link rel="manifest" href="/manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-  <title>Cafeloppen Christiania</title>
+  <title>Cafeloppen Christiania | Autentisk Thai Mad</title>
+  <meta name="description" content="Læs om vores køkken og restaurantens historie. Følg med på Instagram og Facebook. Se vores glade smiley rapport. ">
+  <meta name="keywords" content="thai, thai mad, restaurant, take away, vegansk, ">
   <meta name="title" content="Cafeloppen Christiania">
-  <meta name="description" content="Vi serverer ”back to basics” thaimad med udgangspunkt i de thailandske gadekøkkener.">
 </head>
 
 <body>
@@ -109,7 +110,7 @@
   <h3 class="maintitle">Sociale Medier</h3>
   <div class="socialmedia">
     <section class="fb">
-<!-- Facebook Side cover imbed-->
+      <!-- Facebook Side cover imbed-->
       <div class="frame">
         <h4 class="smiley-link">
           LIKE OS<br>PÅ FACEBOOK
@@ -120,7 +121,7 @@
     </section>
 
 
-<!-- Instagram feed imbed-->
+    <!-- Instagram feed imbed-->
     <section class="inst">
       <div class="framesecond">
         <h4 class="smiley-link">
