--- a/menu.html
+++ b/menu.html
@@ -27,9 +27,10 @@
   <link rel="manifest" href="/manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-  <title>Menukort Cafeloppen</title>
+  <title>Cafeloppen Christiania | Autentisk Thai Mad</title>
+  <meta name="description" content="Se vores menukort inspireret af det thailandske gadekøkken. Stirfry, Wok, Kokoskarry, Vegansk og meget mere.">
+  <meta name="keywords" content="thai, thai mad, restaurant, take away, vegansk, ">
   <meta name="title" content="Cafeloppen Christiania">
-  <meta name="description" content="Se det store menukort inspireret af nordthailandske gadekøkkener">
 </head>
 
 <body>
