Social Icons added and working

--- a/bookbord.html
+++ b/bookbord.html
@@ -29,8 +29,8 @@
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="title" content="Cafeloppen Christiania">
   <title>Cafeloppen Christiania | Autentisk Thai Mad</title>
-  <meta name="Description" content="Oplev den rustikke stemning og fantastiske thai retter, hos Cafeloppen. Book bord nu. ">
-  <meta name="Keywords" content="thai, thai mad, restaurant, take away, vegansk, ">
+  <meta name="description" content="Oplev den rustikke stemning og fantastiske thai retter, hos Cafeloppen. Book bord nu. ">
+  <meta name="keywords" content="thai, thai mad, restaurant, take away, vegansk, ">
 </head>
 
 <body>
