--- a/index.html
+++ b/index.html
@@ -150,7 +150,12 @@
       </div>
       <br>
     </h3>
+
     <div class="fødevarestyrelsen">
+      <div class="socialicons">
+        <a href="https://www.facebook.com/CafeLoppen/" target="_blank"> <img src="img/facebook.png" alt=""></a>
+        <a href="https://www.instagram.com/cafeloppenchristiania/" target="_blank"><img src="img/instagram.png" alt=""></a>
+      </div>
       <a class="fødevarestyrelsen" href="https://www.findsmiley.dk/114412"><img class="fødevarestyrelsen" src="img/elitemaerke.jpg" alt="Elite Smiley"></a>
       <a class="fødevarestyrelsen" href="https://www.findsmiley.dk/114412"><br>Se vores smileyrapport her<br></a>
       <a class="fødevarestyrelsen" href="cookiepolitik.html"><br>Se vores Cookiepolitik her</a>
