--- a/menu.html
+++ b/menu.html
@@ -82,6 +82,9 @@
   <!-- Menu oversigt Mobile Scroll funktion slut-->
   <div class="backplate">
   </div>
+  <h3 class="maintitle">
+    Menu
+  </h3>
   <div class="menuitems">
     <div id="1" class="firstsection">
       <img class="foodimg imgforårsruller" src="img/rolls.png" alt="picture of spring rolls">
