Backlog almost done

--- a/index.html
+++ b/index.html
@@ -34,12 +34,13 @@
   <meta name="description" content="Hos Cafeloppen har vi autentisk thai mad i hjertet af Christianshavn. Se menuen, book bord eller bestil take away.">
   <meta name="keywords" content="thai, thai mad, restaurant, take away, vegansk ">
   <meta name="title" content="Cafeloppen Christiania">
+  <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="4624e9a0-dbf2-46f7-ae8d-3412630f5f3f" data-blockingmode="auto" type="text/javascript"></script>
 </head>
 
 <body>
   <div class="topbar">
     <div class="logoedit">
-      <a href="index.html"><img class="logo" src="img/cafeloppen.png" alt="Logo for Cafeloppen"></a>
+      <a href="index.html"><img class="logo" src="img/logo.svg" alt="Logo for Cafeloppen"></a>
     </div>
 
     <input id="navtoggle" type="checkbox" />
@@ -72,7 +73,7 @@
     </nav>
 
   </div>
-
+<script id="CookieDeclaration" src="https://consent.cookiebot.com/4624e9a0-dbf2-46f7-ae8d-3412630f5f3f/cd.js" type="text/javascript" async></script>
 
 
 
@@ -144,10 +145,11 @@
 
     <h3 class="sitemap">
       <div class="sitemap-links">
+        <div class="First"><a class="sitelinks first" href="index.html">Forside</a><br><a class="sitelinks first" href="menu.html">menu</a><br><a class="sitelinks first" href="bookbord.html">Book Bord</a></div>
+
         <div class="Second"><a class="sitelinks Second" href="takeaway.html">Take Away</a><br><a class="sitelinks Second" href="catering.html">catering</a><br><a class="sitelinks Second" href="omos.html">om os</a><br><a class="sitelinks Second"
             href="kontakt.html">kontakt</a></div>
-        <div class="First"><a class="sitelinks first" href="index.html">Forside</a><br><a class="sitelinks first" href="menu.html">menu</a><br><a class="sitelinks first" href="bookbord.html">Book Bord</a></div>
-      </div>
+        </div>
       <br>
     </h3>
 
