--- a/cookiepolitik.html
+++ b/cookiepolitik.html
@@ -36,7 +36,7 @@
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v7.0"></script>
   <div class="topbar">
     <div class="logoedit">
-      <a href="index.html"><img class="logo" src="img/cafeloppen.png" alt="Logo for Cafeloppen"></a>
+      <a href="index.html"><img class="logo" src="img/logo.svg" alt="Logo for Cafeloppen"></a>
     </div>
 
     <input id="navtoggle" type="checkbox" />
