--- a/kontakt.html
+++ b/kontakt.html
@@ -35,7 +35,7 @@
 <body>
   <div class="topbar">
     <div class="logoedit">
-      <a href="index.html"><img class="logo" src="img/cafeloppen.png" alt="Logo for Cafeloppen"></a>
+      <a href="index.html"><img class="logo" src="img/logo.svg" alt="Logo for Cafeloppen"></a>
     </div>
 
     <input id="navtoggle" type="checkbox" />
