--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <section class="frontimgcontainer">
     <h2 class="fronttext">Oplev autentisk thaimad <br>i hjertet af Christianshavn</h2>
     <div class="btn">
-      <a class="menubutton" href="menu.html">menu</a>
+      <a class="menubutton" href="http://cafeloppen.takeawayfinder.com/menu">takeaway</a>
     </div>
   </section>
   <div class="start">
