--- a/bookbord.html
+++ b/bookbord.html
@@ -81,17 +81,17 @@
       <h3>
         For Reservation
       </h3>
-      <p class="aboutus">Tlf: +45 41 18 41 16<br>eller<br>Book igennem thefork herunder<br><br></p>
+      <p class="aboutus">Tlf: +45 41 18 41 16<br> <br>eller<br>Book igennem thefork herunder<br><br></p>
       <iframe src="https://module.lafourchette.com/da_DK/module/209537-18704 " style="border: 1px solid green; width: 100%; min-height:490px;  scrolling:yes;"></iframe>
     </section>
     <!-- The Fork imbed slut-->
 
-    <section class="kontakt forbestillingsektion">
+    <section class="forbestillingsektion">
       <div class="arrangementerinside">
-        <h3>
+        <h3 class="remove">
           Arrangementer
         </h3>
-        <p class="aboutus">For bestilling af arrangementer<br>for mere end 20 personer
+        <p class="aboutus">For bestilling af arrangementer<br> på mere end 20 personer
           <br>kontakt os på: <br><br>Tlf: +45 41 18 41 16<br>eller<br><a class="emcontact" href="mailto:cafeloppen@cafeloppen.com?subject=feedback">cafeloppen@cafeloppen.com</a></p>
 
       </div>
