--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
   <meta name="description" content="Hos Cafeloppen har vi autentisk thai mad i hjertet af Christianshavn. Se menuen, book bord eller bestil take away.">
   <meta name="keywords" content="thai, thai mad, restaurant, take away, vegansk ">
   <meta name="title" content="Cafeloppen Christiania">
-  <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="4624e9a0-dbf2-46f7-ae8d-3412630f5f3f" data-blockingmode="auto" type="text/javascript"></script>
 </head>
 
 <body>
@@ -108,9 +107,7 @@
       <p id="linethreetext" class="sheetsstyling"></p>
       <p id="linefourtext" class="sheetsstyling"></p>
     </section>
-    <div class="spacer">
-
-    </div>
+    
     <div class="slideshow">
       <div class="swiper-container">
         <div class="swiper-wrapper">
@@ -162,7 +159,7 @@
       <a class="fødevarestyrelsen" href="https://www.findsmiley.dk/114412"><br>Se vores smileyrapport her<br></a>
       <a class="fødevarestyrelsen" href="cookiepolitik.html"><br>Se vores Cookiepolitik her</a>
     </div>
-    <p class="cpright"> Copyright &copy; <script>
+    <p class="cpright"> Copyright &copy; <script class="getFullYear">
         document.write(new Date().getFullYear())
       </script>
     </p>
@@ -170,6 +167,7 @@
 
 
 
+  <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="4624e9a0-dbf2-46f7-ae8d-3412630f5f3f" data-blockingmode="auto" type="text/javascript"></script>
 
   <script type='text/javascript'>
     var publicSpreadsheetUrl = 'https://docs.google.com/spreadsheets/d/1odiRYpebHbk6Cf-ChQf0bp-e-HjoYNrJ-RyaQ8bGgxs/edit?usp=sharing';
