--- a/menu.html
+++ b/menu.html
@@ -87,7 +87,7 @@
   </h3>
   <div class="menuitems">
     <div id="1" class="firstsection">
-      <img class="foodimg imgforårsruller" src="img/rolls.png" alt="picture of spring rolls">
+      <img class="foodimg imgforårsruller" src="img/rolls.png" alt="Billede af forårsruller">
       <h3 class="menutitles">Forårsruller</h3>
       <div class="textsection1">
         <div class="dish rollsitem1">
@@ -108,7 +108,7 @@
       </div>
     </div>
     <div id="2" class="scrollpd">
-      <img class="foodimg imgappetizer" src="img/forretter.png" alt="picture of appetizers">
+      <img class="foodimg imgappetizer" src="img/forretter.png" alt="Billede af forretter">
       <h3 class="menutitles">Forretter</h3>
       <div class="textsection2">
         <div class="dish">
@@ -134,7 +134,7 @@
       </div>
     </div>
     <div id="3">
-      <img class="foodimg imgkokoskarry" src="img/kokoskarry.png" alt="picture of a curry dish">
+      <img class="foodimg imgkokoskarry" src="img/kokoskarry.png" alt="Billede af kokoskarry-ret">
       <h3 class="menutitles">Kokoskarry</h3>
       <h4 class="menuheadersmall">Serveres med Jasminris</h4>
       <p class="choosebetween">Vælg mellem kylling, oksekød eller tofu til din ret<br>Med kongerejer eller and + 10kr</p>
@@ -162,7 +162,7 @@
       </div>
     </div>
     <div id="4">
-      <img class="foodimg imgtraditionalwok" src="img/traditional.png" alt="picture of a traditional Wok dish">
+      <img class="foodimg imgtraditionalwok" src="img/traditional.png" alt="Billede af en traditionel thailandsk wok-ret">
       <h3 class="menutitles">Traditionel Wok</h3>
       <h4 class="menuheadersmall">Serveres med Jasminris</h4>
       <div class="textsection1">
@@ -184,7 +184,7 @@
       </div>
     </div>
     <div id="5">
-      <img class="foodimg imgstirfry" src="img/stirfry.png" alt="picture of stirfry">
+      <img class="foodimg imgstirfry" src="img/stirfry.png" alt="Billede af stirfry">
       <h3 class="menutitles">Stirfry</h3>
       <h4 class="menuheadersmall">Serveres med Jasminris</h4>
       <p class="choosebetween">Vælg mellem kylling, oksekød eller tofu til din ret<br>Med kongerejer eller and + 10kr</p>
@@ -207,7 +207,7 @@
       </div>
     </div>
     <div id="6">
-      <img class="foodimg imgsmallbites" src="img/appetizers.png" alt="picture of stirfry">
+      <img class="foodimg imgsmallbites" src="img/appetizers.png" alt="Billede af små bidder">
       <h3 class="menutitles">Små bidder</h3>
       <div class="textsection1">
         <div class="dish">
@@ -228,7 +228,7 @@
       </div>
     </div>
     <div id="7">
-      <img class="foodimg imgdesserts" src="img/appetizers.png" alt="picture of stirfry">
+      <img class="foodimg imgdesserts" src="img/placeholder3.png" alt="Billede af desserter">
       <h3 class="menutitles">Desserter</h3>
       <div class="textsection3">
         <div class="dish dessert1">
@@ -259,7 +259,7 @@
       </div>
     </div>
     <div id="8">
-      <img class="foodimg imgvegan" src="img/kokoskarry.png" alt="picture of stirfry">
+      <img class="foodimg imgvegan" src="img/placeholder1.png" alt="Billede af vegansk mad">
       <h3 class="menutitles">Vegansk</h3>
       <div class="textsection4">
         <div class="dish vg1">
@@ -299,8 +299,9 @@
         </div>
       </div>
     </div>
-    <div id="9">
-      <img class="foodimg imgdrikkevarer" src="img/drikke.jpg" alt="picture of stirfry">
+    <div id="9" >
+
+      <img class="foodimg imgdrikkevarer" src="img/drikke.png" alt="Billede af drikkevarer">
       <h3 class="menutitles">drikkevarer</h3>
       <div class="textsection5">
         <div class="dish wine1">
