--- a/catering.html
+++ b/catering.html
@@ -77,8 +77,7 @@
 
   <div class="socialmedia">
     <section class="conferencetekst">
-      <p class="aboutus">Skal du holde bryllup, konference eller noget helt andet,<br> kan vi levere alt lige fra syvretters menuer til en simpel buffet til helt op til 200 personer</p>
-      <p class="aboutus"><br>Ring eller skriv til os for en lille snak om hvad du ønsker. <br>Tlf: +45 41 18 41 16<br>eller<br><a class="emcontact" href="mailto:cafeloppen@cafeloppen.com?subject=feedback">cafeloppen@cafeloppen.com</a></p>
+      <p class="aboutuscat">Skal du holde bryllup, konference eller noget helt andet,<br> kan vi levere alt lige fra syvretters menuer til en simpel buffet til helt op til 200 personer<br><br><br>Ring eller skriv til os for en lille snak om hvad du ønsker.<br>Tlf: +45 41 18 41 16<br>eller<br><a class="emcontact" href="mailto:cafeloppen@cafeloppen.com?subject=feedback">cafeloppen@cafeloppen.com</a></p>
     </section>
 
     <div class="spacer">
@@ -97,7 +96,7 @@
           <label for="phone"></label>
           <input type="tel" name="phone" class="phoneinput" placeholder="Indtast Telefonnummer" required><br><br>
           <label for="message"></label>
-          <br><textarea class="emailinput" style="border:2px solid lightgrey; height: 150px; " name="msg" id="msg-box" placeholder="Skriv din besked her"></textarea><br>
+          <br><textarea class="emailinput" style="border:1px solid lightgrey; height: 150px; " name="msg" id="msg-box" placeholder="Skriv din besked her"></textarea><br>
           <input type="submit" name="submit" class="sub-btn" value="Send">
         </form>
       </div>
