--- a/kontakt.html
+++ b/kontakt.html
@@ -103,7 +103,7 @@
   <div class="maps">
     <iframe class="embedmaps"
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.884131915545!2d12.59454711609907!3d55.673615005563846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465253397d75aa69%3A0x4023eef63f84fa5f!2sCafeloppen%20Christiania%20Streetkitchen!5e0!3m2!1sda!2sdk!4v1590405727949!5m2!1sda!2sdk"
-      width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+      width="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
   </div>
 
 
