--- a/index.html
+++ b/index.html
@@ -77,10 +77,19 @@
 
 
   <section class="frontimgcontainer">
-    <h2 class="fronttext">Oplev autentisk thaimad <br>i hjertet af Christianshavn</h2>
-    <div class="btn">
-      <a class="menubutton" href="http://cafeloppen.takeawayfinder.com/menu">takeaway</a>
+    <div class="frontsubcont">
+      <video class="deskvid" src="img/Forsidevideo.webm" autoplay loop>
+      </video>
+      <video class="mobilevid" src="img/forsidevideo_mobile.webm" autoplay loop>
+      </video>
+        <h2 class="fronttext">Oplev autentisk thaimad <br>i hjertet af Christianshavn</h2>
+        <div class="btn">
+          <a class="menubutton" href="http://cafeloppen.takeawayfinder.com/menu" target="_blank">takeaway</a>
+        </div>
+
     </div>
+
+
   </section>
   <div class="start">
   </div>
@@ -107,7 +116,7 @@
       <p id="linethreetext" class="sheetsstyling"></p>
       <p id="linefourtext" class="sheetsstyling"></p>
     </section>
-    
+
     <div class="slideshow">
       <div class="swiper-container">
         <div class="swiper-wrapper">
