--- a/menu.html
+++ b/menu.html
@@ -69,7 +69,7 @@
   </div>
   <!-- Menu oversigt Mobile Scroll funktion Start-->
   <div id="categories">
-    <a class="categorystyling forårsruller" href="#1">Forårsruller</a>
+    <a class="categorystyling forårsruller activemenu" href="#1">Forårsruller</a>
     <a class="categorystyling forretter" href="#2">Forretter</a>
     <a class="categorystyling kokoskarry" href="#3">Kokoskarry</a>
     <a class="categorystyling traditionalwok" href="#4">Traditionel Wok</a>
@@ -299,8 +299,10 @@
         </div>
       </div>
     </div>
-    <div id="9" >
+    <div id="nine">
 
+    </div>
+    <div id="9" >
       <img class="foodimg imgdrikkevarer" src="img/drikke.png" alt="Billede af drikkevarer">
       <h3 class="menutitles">drikkevarer</h3>
       <div class="textsection5">
