last last last commit

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
   <section class="frontimgcontainer">
     <div class="frontsubcont">
-      <video class="deskvid" src="img/Forsidevideo.webm" autoplay loop>
+      <video class="deskvid" src="img/forsidevideo.webm" autoplay loop>
       </video>
       <video class="mobilevid" src="img/forsidevideo_mobile.webm" autoplay loop>
       </video>
@@ -176,7 +176,7 @@
 
 
 
-  <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="4624e9a0-dbf2-46f7-ae8d-3412630f5f3f" data-blockingmode="auto" type="text/javascript"></script>
+<!--  <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="4624e9a0-dbf2-46f7-ae8d-3412630f5f3f" data-blockingmode="auto" type="text/javascript"></script>-->
 
   <script type='text/javascript'>
     var publicSpreadsheetUrl = 'https://docs.google.com/spreadsheets/d/1odiRYpebHbk6Cf-ChQf0bp-e-HjoYNrJ-RyaQ8bGgxs/edit?usp=sharing';
