last last last last commit

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 
   <section class="frontimgcontainer">
     <div class="frontsubcont">
-      <video class="deskvid" src="img/forsidevideo.webm" autoplay loop>
+      <video class="deskvid" src="img/forsidevideo.webm" autoplay muted loop>
       </video>
-      <video class="mobilevid" src="img/forsidevideo_mobile.webm" autoplay loop>
+      <video class="mobilevid" src="img/forsidevideo_mobile.webm" autoplay muted loop>
       </video>
         <h2 class="fronttext">Oplev autentisk thaimad <br>i hjertet af Christianshavn</h2>
         <div class="btn">
@@ -120,16 +120,16 @@
     <div class="slideshow">
       <div class="swiper-container">
         <div class="swiper-wrapper">
-          <div class="swiper-slide"><img class="slideshowimages" src="img/galleri1.jpg" alt=""></div>
-          <div class="swiper-slide"><img class="slideshowimages" src="img/galleri3.jpg" alt=""></div>
-          <div class="swiper-slide"><img class="slideshowimages" src="img/galleri4.jpg" alt=""></div>
-          <div class="swiper-slide"><img class="slideshowimages" src="img/galleri5.jpg" alt=""></div>
-          <div class="swiper-slide"><img class="slideshowimages" src="img/galleri6.jpg" alt=""></div>
-          <div class="swiper-slide"><img class="slideshowimages" src="img/galleri7.jpg" alt=""></div>
-          <div class="swiper-slide"><img class="slideshowimages" src="img/galleri8.jpg" alt=""></div>
-          <div class="swiper-slide"><img class="slideshowimages" src="img/galleri9.jpg" alt=""></div>
-          <div class="swiper-slide"><img class="slideshowimages" src="img/galleri2.jpg" alt=""></div>
-          <div class="swiper-slide"><img class="slideshowimages" src="img/galleri10.jpg" alt=""></div>
+          <div class="swiper-slide"><img class="slideshowimages" src="img/galleri1.jpg" alt="Ude foran Cafeloppen"></div>
+          <div class="swiper-slide"><img class="slideshowimages" src="img/galleri3.jpg" alt="En besøgende der sidder ude foran Cafeloppen"></div>
+          <div class="swiper-slide"><img class="slideshowimages" src="img/galleri4.jpg" alt="Smilende kunder foran Cafeloppen"></div>
+          <div class="swiper-slide"><img class="slideshowimages" src="img/galleri5.jpg" alt="Et barn"></div>
+          <div class="swiper-slide"><img class="slideshowimages" src="img/galleri6.jpg" alt="Mad der bliver tilberedt i det åbne køkken"></div>
+          <div class="swiper-slide"><img class="slideshowimages" src="img/galleri7.jpg" alt="Høje flammer fra wokken, mens kokken er igang er med at tilberede"></div>
+          <div class="swiper-slide"><img class="slideshowimages" src="img/galleri8.jpg" alt="Cafeens interiør med bordopdækning"></div>
+          <div class="swiper-slide"><img class="slideshowimages" src="img/galleri9.jpg" alt="Indretning med bordopdækning"></div>
+          <div class="swiper-slide"><img class="slideshowimages" src="img/galleri2.jpg" alt="Besøgende der sidder foran Cafeloppen"></div>
+          <div class="swiper-slide"><img class="slideshowimages" src="img/galleri10.jpg" alt="Tjenere der er på arbejde"></div>
         </div>
         <!-- Add Pagination -->
         <div class="swiper-pagination"></div>
@@ -161,8 +161,8 @@
 
     <div class="fødevarestyrelsen">
       <div class="socialicons">
-        <a href="https://www.facebook.com/CafeLoppen/" target="_blank"> <img src="img/facebook.png" alt=""></a>
-        <a href="https://www.instagram.com/cafeloppenchristiania/" target="_blank"><img src="img/instagram.png" alt=""></a>
+        <a href="https://www.facebook.com/CafeLoppen/" target="_blank"> <img src="img/facebook.png" alt="facebook logo"></a>
+        <a href="https://www.instagram.com/cafeloppenchristiania/" target="_blank"><img src="img/instagram.png" alt="instagram logo"></a>
       </div>
       <a class="fødevarestyrelsen" href="https://www.findsmiley.dk/114412"><img class="fødevarestyrelsen" src="img/elitemaerke.jpg" alt="Elite Smiley"></a>
       <a class="fødevarestyrelsen" href="https://www.findsmiley.dk/114412"><br>Se vores smileyrapport her<br></a>
