--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 
   <section class="frontimgcontainer">
     <div class="frontsubcont">
-      <video class="deskvid" src="img/forsidevideo.webm" autoplay muted loop>
+      <video class="deskvid" src="img/forsidevideo.m4v" autoplay muted loop>
       </video>
-      <video class="mobilevid" src="img/forsidevideo_mobile.webm" autoplay muted loop>
+      <video class="mobilevid" src="img/forside_mobile.m4v" autoplay muted loop>
       </video>
         <h2 class="fronttext">Oplev autentisk thaimad <br>i hjertet af Christianshavn</h2>
         <div class="btn">
