last last last last last last commit

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="frontsubcont">
       <video class="deskvid" src="img/forsidevideo.m4v" autoplay muted loop>
       </video>
-      <video class="mobilevid" src="img/forside_mobile.m4v" autoplay muted loop>
+      <video class="mobilevid" src="img/forside_mobile.m4v" autoplay playsinline muted loop>
       </video>
         <h2 class="fronttext">Oplev autentisk thaimad <br>i hjertet af Christianshavn</h2>
         <div class="btn">
